# measury

./: .gitignore  DataHandler.py  DrawableObjects.py  FileHandler.py  MANIFEST.in  MainUI.py  MainWindow.py  OutputWindow.py  README.md  Semmy.spec  SemmyWindow.py  Semmy_2.spec  VispyCanvas.py  VispyCanvasWrapper.py  a.py  build.py  compile.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run.spec  semmy.py  semmy.semmy  semmy.toml  semmy2.semmy  semmy_old.py  test.py  ui.py
.github/workflows/: compile.yml  publish.yml  pytest.yml
compiling/: compile.py  run_clean.py
data/: sem_db.yml
img/: 2023-04-24_PTB_D5_10-01.semmy  2023-04-24_PTB_D5_10-01_test.semmy  2023-06-29-D5-11-01.tif  GUZ_001.tif  GUZ_002.tif  ZeissNIM_001.tif  ZeissNIM_002.tif  test_file.meas  test_file.semmy  test_file_with_scaling.semmy  test_file_wo_scaling.semmy
img/logo/: license.txt
semmy/: __init__.py  app.py  data_handler.py  drawable_objects.py  main_ui.py  main_window.py  vispy_canvas.py  windows.py
src/measury/: __init__.py  app.py  data_handler.py  drawable_objects.py  main_ui.py  main_window.py  right_ui.py  settings.py  vispy_canvas.py  windows.py
src/measury/data/: microscopes.py
src/semmy/: __init__.py  _version.py  app.py  data_handler.py  drawable_objects.py  main_ui.py  main_window.py  right_ui.py  settings.py  vispy_canvas.py  windows.py
src/semmy/data/: microscopes.py  sem_db.yml  settings.yaml
tests/: test_measury.py  test_semmy.py  test_wo_gui.py
tests/test_data/: test_file.msry  test_file.semmy  test_file_2.msry  test_file_3.msry  test_file_4.msry  test_file_5.msry
vispy/: background.py  combine.py  display_image.py  events.py  image-renderer.py  image_transform.py  line.py  plotting.py  plotting_2.py  shapes.py
